added instructions and inventory files for workshop

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ demos/engine/vagrant/.vagrant
 demos/engine/vagrant/*.log
 demos/tower/vagrant/.vagrant
 demos/tower/vagrant/*.log
+demos/workshop/credentials.md
