--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,4 +32,6 @@ step_two:
     GIT_SSL_NO_VERIFY: "True"
   stage: secondary
   script:
+    - sudo apt update
+    - sudo apt install dnsutils
     - dig wwt.com
